Separate cacheservers from dbservers, however the example vagrant simply assigns them as the same server

--- a/playbook/roles/django/templates/db.py.j2
+++ b/playbook/roles/django/templates/db.py.j2
@@ -25,9 +25,9 @@
 DATABASES = {
     'default': {
         'ENGINE': "django_postgrespool",
-        'NAME': "{{ database.user }}",
-        'USER': "{{ database.password }}",
-        'PASSWORD': "{{ database.name }}",
+        'NAME': "{{ database.name }}",
+        'USER': "{{ database.user }}",
+        'PASSWORD': "{{ database.password }}",
         'HOST': "{{ groups.get('dbservers')[0] }}",
         'PORT': "{{ database.port }}",
     }
