--- a/playbook/roles/nginx/templates/nginx.conf.j2
+++ b/playbook/roles/nginx/templates/nginx.conf.j2
@@ -1,6 +1,8 @@
 upstream {{ project.name }} {
+  ip_hash;
+
 {% for host in groups['appservers'] %}
-    server                  {{ host }}:8000
+    server                  {{ host }}:8000 max_fails=3  fail_timeout=15s;
 {% endfor %}
 }
 
