--- a/playbook/roles/uwsgi/templates/app.ini.j2
+++ b/playbook/roles/uwsgi/templates/app.ini.j2
@@ -1,11 +1,12 @@
 [uwsgi]
+socket = :8000
+master = true
 threads = 40
-master = 1
-socket = /tmp/django-{{ project.name }}.sock
-chmod-socket = 775
-chown-socket = {{ project.group }}
-logto = /var/log/uwsgi/{{ project.name }}.log
-chdir = {{ project.root }}/code/application/
+
 virtualenv = {{ project.root }}/environ/
 env = DJANGO_SETTINGS_MODULE={{ django.settings }}
+
+chdir = {{ project.root }}/code/application/
 module = {{ django.wsgi }}
+
+logto = /var/log/uwsgi/{{ project.name }}.log
