--- a/playbook/roles/nginx/templates/nginx.conf.j2
+++ b/playbook/roles/nginx/templates/nginx.conf.j2
@@ -47,7 +47,7 @@ server {
         return              404;
     }
 
-    location @gitlab {
+    location @{{ project.name }} {
         proxy_read_timeout          300;
         proxy_connect_timeout       300;
         proxy_redirect              off;
