--- a/playbook/roles/nginx/templates/vhost.conf.j2
+++ b/playbook/roles/nginx/templates/vhost.conf.j2
@@ -1,9 +1,12 @@
 upstream django_{{ project.name }} {
+{% if len(groups.get('appservers')) > 1 and groups.get('appservers')[0] != inventory_hostname.get('ansible_eth0').get('ipv4').get('address') %}
   ip_hash;
-
 {% for host in groups['appservers'] %}
     server                  {{ host }}:8000 max_fails=3  fail_timeout=15s;
 {% endfor %}
+{% else %}
+    server                  127.0.0.1:8000;
+{% endif %}
 }
 
 server {
