--- a/playbook/roles/django/templates/celery.py.j2
+++ b/playbook/roles/django/templates/celery.py.j2
@@ -1,1 +1,18 @@
+# project
+#   __init__.py
+#   manage.py
+#   base/
+#     __init__.py
+#     default.py
+#     live.py
+#     local.py
+#     test.py
+#     modules/
+#       celery.py <---- this file.
+
+{% if groups.get('dbservers')|length > 1 and groups.get('dbservers')[0] != inventory_hostname.get('ansible_eth0').get('ipv4').get('address') %}
 BROKER_URL = "redis://{{ groups.get('queueservers')[0] }}:{{ message_queue.get('redis_port', 6379) }}/{{ message_queue.get('redis_id', 2) }} }}"
+        {% else %}
+BROKER_URL = "redis://localhost:{{ message_queue.get('redis_port', 6379) }}/{{ message_queue.get('redis_id', 2)}}"
+        {% endif %}
+
