--- a/playbook/roles/django/templates/db.py.j2
+++ b/playbook/roles/django/templates/db.py.j2
@@ -28,8 +28,13 @@ DATABASES = {
         'NAME': "{{ database.name }}",
         'USER': "{{ database.user }}",
         'PASSWORD': "{{ database.password }}",
+{% if groups.get('dbservers')|length > 1 and groups.get('dbservers')[0] != inventory_hostname.get('ansible_eth0').get('ipv4').get('address') %}
         'HOST': "{{ groups.get('dbservers')[0] }}",
         'PORT': "{{ database.port }}",
+        {% else %}
+        'HOST': "localhost",
+        'PORT': "",
+        {% endif %}
     }
 }
 
