--- a/playbook/roles/nginx/templates/vhost.conf.j2
+++ b/playbook/roles/nginx/templates/vhost.conf.j2
@@ -3,11 +3,11 @@ upstream django_{{ project.name }} {
 {% if not 'appservers' in group_names  %}
   ip_hash;
   {% for host in groups.get('appservers') %}
-    server                  {{ hostvars[host]['ansible_default_ipv4']['address']  }}:8000 max_fails=3  fail_timeout=15s;
+    server                  {{ hostvars[host]['ansible_default_ipv4']['address']  }}:{{ django.port }} max_fails=3  fail_timeout=15s;
   {% endfor %}
 
 {% else %}
-    server                  127.0.0.1:8000;
+    server                  127.0.0.1:{{ django.port }};
 {% endif %}
 
 }
@@ -15,15 +15,19 @@ upstream django_{{ project.name }} {
 server {
 
     listen                  80;
+    {% if nginx.ssl is defined  %}
     listen                  443 ssl;
+    {% endif %}
 
     charset                 utf-8;
     server_tokens           off;
 
     server_name             {% for name in nginx.servernames %}{{name}} {%endfor%};
 
+    {% if nginx.ssl is defined %}
     ssl_certificate         /etc/nginx/ssl/{{ project.name }}-public;
     ssl_certificate_key     /etc/nginx/ssl/{{ project.name }}-private;
+    {% endif %}
 
 
     access_log              {{ project.root }}logs/nginx.access.{{ ansible_fqdn }}.log;
